gcc/testsuite/gm2/iso/fail/CHAR.mod
MODULE CHAR ;

IMPORT CHAR ;

BEGIN
   CHAR.Write ("h")
END CHAR.
